# inkspire

./: .gitignore  LICENSE  README.md  build.sh  contours.py  detection.py  drawing.py  inkspire.spec  line_tracer.py  main.py  mouse_x11.py  preview.py  pyproject.toml  requirements.txt  suggest.py  widgets.py
.github/workflows/: release.yml
core/: _keybinds_win32.py  _keybinds_x11.py  bezier.py  clipboard.py  config.py  fonts.py  keybinds.py  optimize.py
detection/: contours.py  svg.py  text.py
docs/plans/: 2026-04-09-infrastructure-crossplatform-design.md  2026-04-09-infrastructure-crossplatform.md
drawing/: _mouse_win32.py  _mouse_x11.py  engine.py  mouse.py  mouse_x11.py
ui/: about_dialog.py  canvas_picker.py  crop_dialog.py  keybinds_dialog.py  preview.py  tooltip.py  widgets.py
